# pricemon

./: .gitignore  LICENSE  MANIFEST.in  README.md  pricemon.py  pyproject.toml
.github/workflows/: ci.yml
pricemon/: __init__.py  __main__.py  browser.py  cli.py  config.py  cookies.py  models.py  output.py  store.py
pricemon/scrapers/: __init__.py  alibaba.py  amazon.py  base.py
results/examples/: alibaba_servo_motor.json  amazon_servo_motor.json
